<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Project: Game 2048
  ~ Last Modified: 6/26/20 2:42 PM
  ~
  ~ Copyright (C) 2020 Programmer-Yang_Xun@outlook.com. All Rights Reserved.
  ~ Welcome to visit https://GitHub.com/Hydr10n
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.hydr10n.game2048.ViewModel" />

        <import type="com.hydr10n.game2048.GameState" />

        <variable
            name="viewModel"
            type="ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/layout"
                android:textColor="@color/mainForeground"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textview_layout"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/button_layout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectLayoutButton_onClick"
                    android:text="@string/layout4"
                    android:textColor="@color/mainForeground"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/button_layout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectLayoutButton_onClick"
                    android:text="@string/layout5"
                    android:textColor="@color/mainForeground"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/button_layout6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="selectLayoutButton_onClick"
                    android:text="@string/layout6"
                    android:textColor="@color/mainForeground"
                    android:textStyle="bold" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corner_newgame"
                android:enabled="@{viewModel.layoutReady}"
                android:onClick="newGameButton_onClick"
                android:text="@string/new_game"
                android:textAllCaps="false"
                android:textColor="#F9F6F2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/rounded_corner_score"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textAlignment="center"
                    android:textColor="@color/scoreViewForeground"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:text="@{String.valueOf(viewModel.score)}"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/rounded_corner_score"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/best"
                    android:textAlignment="center"
                    android:textColor="@color/scoreViewForeground"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:text="@{String.valueOf(viewModel.bestScore)}"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:id="@+id/layout_game"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner_gamelayout"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner_gamestate"
                android:gravity="center"
                android:text="@{viewModel.gameState == GameState.Won ? @string/you_win : viewModel.gameState == GameState.Over ? @string/game_over : null}"
                android:textColor="#776e65"
                android:textSize="50sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.gameState == GameState.Won || viewModel.gameState == GameState.Over ? View.VISIBLE : View.GONE}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>